// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NuclearJamQueueItem > (Snapshot) renders a current item with cover art 1`] = `
<div>
  <div
    class="border-border flex items-center gap-3 border-b-(length:--border-width) px-4 py-2 surface-primary"
    data-is-current="true"
    data-testid="jam-queue-item"
  >
    <div
      class="border-border bg-muted flex size-12 shrink-0 items-center justify-center overflow-hidden rounded-md border-(length:--border-width)"
    >
      <img
        alt="Idioteque"
        class="size-full object-cover"
        src="https://example.com/kid-a.jpg"
      />
    </div>
    <div
      class="min-w-0 flex-1"
    >
      <div
        class="truncate text-sm font-bold"
      >
        Idioteque
      </div>
      <div
        class="truncate text-xs opacity-60"
      >
        Radiohead
      </div>
    </div>
  </div>
</div>
`;

exports[`NuclearJamQueueItem > (Snapshot) renders a non-current item without artwork 1`] = `
<div>
  <div
    class="border-border flex items-center gap-3 border-b-(length:--border-width) px-4 py-2"
    data-is-current="false"
    data-testid="jam-queue-item"
  >
    <div
      class="border-border bg-muted flex size-12 shrink-0 items-center justify-center overflow-hidden rounded-md border-(length:--border-width)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cassette-tape text-muted-foreground opacity-20"
        fill="none"
        height="40"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.2"
        viewBox="0 0 24 24"
        width="40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="16"
          rx="2"
          width="20"
          x="2"
          y="4"
        />
        <circle
          cx="8"
          cy="10"
          r="2"
        />
        <path
          d="M8 12h8"
        />
        <circle
          cx="16"
          cy="10"
          r="2"
        />
        <path
          d="m6 20 .7-2.9A1.4 1.4 0 0 1 8.1 16h7.8a1.4 1.4 0 0 1 1.4 1l.7 3"
        />
      </svg>
    </div>
    <div
      class="min-w-0 flex-1"
    >
      <div
        class="truncate text-sm font-bold"
      >
        Idioteque
      </div>
      <div
        class="truncate text-xs opacity-60"
      >
        Radiohead
      </div>
    </div>
  </div>
</div>
`;

exports[`NuclearJamQueueItem > (Snapshot) renders a remove button 1`] = `
<div>
  <div
    class="border-border flex items-center gap-3 border-b-(length:--border-width) px-4 py-2"
    data-is-current="false"
    data-testid="jam-queue-item"
  >
    <div
      class="border-border bg-muted flex size-12 shrink-0 items-center justify-center overflow-hidden rounded-md border-(length:--border-width)"
    >
      <img
        alt="Idioteque"
        class="size-full object-cover"
        src="https://example.com/kid-a.jpg"
      />
    </div>
    <div
      class="min-w-0 flex-1"
    >
      <div
        class="truncate text-sm font-bold"
      >
        Idioteque
      </div>
      <div
        class="truncate text-xs opacity-60"
      >
        Radiohead
      </div>
    </div>
    <button
      class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 surface-primary border-border border-(length:--border-width) size-8 justify-center shrink-0"
      data-headlessui-state=""
      data-testid="jam-queue-item-remove-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
</div>
`;
